[package]
name = "adventofcode_2021"
version = "0.1.0"
authors = ["elsid <elsid.mail@gmail.com>"]
edition = "2018"

[[bin]]
name = "day_1_part_1"
path = "src/day_1_part_1.rs"

[[bin]]
name = "day_1_part_2"
path = "src/day_1_part_2.rs"

[[bin]]
name = "day_2_part_1"
path = "src/day_2_part_1.rs"

[[bin]]
name = "day_2_part_2"
path = "src/day_2_part_2.rs"

[[bin]]
name = "day_3_part_1"
path = "src/day_3_part_1.rs"

[[bin]]
name = "day_3_part_2"
path = "src/day_3_part_2.rs"

[[bin]]
name = "day_4_part_1"
path = "src/day_4_part_1.rs"

[[bin]]
name = "day_4_part_2"
path = "src/day_4_part_2.rs"

[[bin]]
name = "day_5_part_1"
path = "src/day_5_part_1.rs"

[[bin]]
name = "day_5_part_2"
path = "src/day_5_part_2.rs"

[[bin]]
name = "day_6_part_1"
path = "src/day_6_part_1.rs"

[[bin]]
name = "day_6_part_2"
path = "src/day_6_part_2.rs"

[[bin]]
name = "day_7_part_1"
path = "src/day_7_part_1.rs"

[[bin]]
name = "day_7_part_2"
path = "src/day_7_part_2.rs"

[[bin]]
name = "day_8_part_1"
path = "src/day_8_part_1.rs"

[[bin]]
name = "day_8_part_2"
path = "src/day_8_part_2.rs"

[[bin]]
name = "day_9_part_1"
path = "src/day_9_part_1.rs"

[[bin]]
name = "day_9_part_2"
path = "src/day_9_part_2.rs"

[[bin]]
name = "day_10_part_1"
path = "src/day_10_part_1.rs"

[[bin]]
name = "day_10_part_2"
path = "src/day_10_part_2.rs"

[[bin]]
name = "day_11_part_1"
path = "src/day_11_part_1.rs"

[[bin]]
name = "day_11_part_2"
path = "src/day_11_part_2.rs"

[[bin]]
name = "day_12_part_1"
path = "src/day_12_part_1.rs"

[[bin]]
name = "day_12_part_2"
path = "src/day_12_part_2.rs"

[[bin]]
name = "day_13_part_1"
path = "src/day_13_part_1.rs"

[[bin]]
name = "day_13_part_2"
path = "src/day_13_part_2.rs"

[[bin]]
name = "day_14_part_1"
path = "src/day_14_part_1.rs"

[[bin]]
name = "day_14_part_2"
path = "src/day_14_part_2.rs"

[[bin]]
name = "day_15_part_1"
path = "src/day_15_part_1.rs"

[[bin]]
name = "day_15_part_2"
path = "src/day_15_part_2.rs"

[[bin]]
name = "day_16_part_1"
path = "src/day_16_part_1.rs"

[[bin]]
name = "day_16_part_2"
path = "src/day_16_part_2.rs"

[[bin]]
name = "day_17_part_1"
path = "src/day_17_part_1.rs"

[[bin]]
name = "day_17_part_2"
path = "src/day_17_part_2.rs"

[[bin]]
name = "day_18_part_1"
path = "src/day_18_part_1.rs"

[[bin]]
name = "day_18_part_2"
path = "src/day_18_part_2.rs"

[[bin]]
name = "day_19_part_1"
path = "src/day_19_part_1.rs"

[[bin]]
name = "day_19_part_2"
path = "src/day_19_part_2.rs"

[[bin]]
name = "day_20"
path = "src/day_20.rs"

[[bin]]
name = "day_21"
path = "src/day_21.rs"

[[bin]]
name = "day_22"
path = "src/day_22.rs"

[[bin]]
name = "day_23"
path = "src/day_23.rs"

[dependencies]
image = "0.23.14"
itertools = "0.10.3"

[features]
day_7_part_2_log = []
